# napari-napari

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  tox.ini
src/napari_napari/: __init__.py  _widget.py  napari.yaml
src/napari_napari/_tests/: test_widget.py
